# mcp

./: .gitignore  .hanzo_repl_history  LLM.md  MATRIX_TEST_REPORT.md  MCP_DEMO.md  README.md  TREE_SITTER_README.md  build_local.sh  demo-ui-landing-page.js  install_wheel.sh  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  server.js  test-e2e.js  test-individual-ui-tools.js  test-mcp-protocol.js  test-ui-mcp.js  test-ui-tool.js  test-unified-ui-landing.js  test_hanzo_mcp.sh
.github/workflows/: ci.yml  docker-publish.yml
doc/: hanzo-code.md  system_prompt
docs/: SECURITY.md  UI_TOOL_MIGRATION.md  autogui.md
examples/: README.md  award-winning-landing.tsx  browser_use_example.py  computer_use_example.py  github-ui-example.ts  hanzo_code_example.py  page.tsx  search-config.md  unified-ui-integration.ts
go/: Makefile  go.mod
go/hanzomcp/: hanzomcp.go  hanzomcp_test.go
hanzo_mcp/: cli_code.py
hanzo_mcp/tools/: __init__.py  browser_use.py  computer_use.py  dev_tool.py  mcp_manager.py
hanzo_mcp/tools/common/: context.py  thinking.py
hanzo_mcp/tools/vector/: embedding_functions.py  store_manager.py
rust/: Cargo.toml
rust/include/: hanzo_mcp.h
rust/src/: ffi.rs  lib.rs  main.rs  server.rs
rust/src/search/: ast_search.rs  mod.rs  search.rs  unified_search.rs  vector_store.rs
rust/src/tools/: browser_tool.rs  code_tool.rs  exec_tool.rs  fetch_tool.rs  fs_tool.rs  git_tool.rs  hanzo_tool.rs  memory_tool.rs  mod.rs  mode_tool.rs  plan_tool.rs  shell_tool.rs  tasks_tool.rs  think_tool.rs  workspace_tool.rs
rust/src/tools/computer_tool/: linux.rs  macos.rs  mod.rs
rust/src/tools/ui_tool/: mod.rs  windows.rs
rust/tests/: test_browser_tools.rs  test_fs_tools.rs  test_memory_tools.rs  test_search_tools.rs  test_shell_tools.rs  test_think_tools.rs
scripts/: install-autogui.sh
src/: cli.ts  index.ts  zap-server.ts
src/autogui/: factory.ts  index.ts  types.ts
src/autogui/adapters/: base.ts  jsautogui.ts  pyautogui.ts  rust.ts
src/autogui/tools/: autogui-tools.ts
src/orchestration/: agent-tools.ts
src/prompts/: system.ts
src/search/: file-server.ts  index.ts  search-engine.ts  secure-tunnel.ts  types.ts  unified-search.ts  url-helper.ts
src/search/strategies/: ast-search.ts  file-search.ts  symbol-search.ts  text-search.ts  vector-search.ts
src/tools/: ast-search.ts  edit.ts  file-ops.ts  git.ts  hanzo-cloud.ts  hanzo-desktop.ts  index.ts  memory.ts  mode-preset.ts  plan.ts  playwright-control.ts  refactor.ts  search.ts  shell.ts  tasks.ts  think.ts  tool-registry.ts  ui-github-api.ts  ui-registry.ts  unified-ui.ts  vector-search.ts
src/tools/unified/: code.ts  exec.ts  fetch.ts  fs.ts  hanzo.ts  index.ts  workspace.ts
src/types/: index.ts  optional-deps.d.ts
src/ui/: index-unified.ts  index.ts  multi-framework-tools.ts  registry-api.ts  registry-types.ts  ui-tools.ts  unified-ui-tool.ts
src/vector/: lancedb-store.ts
test/: setup.ts  test-search.js
test-suite/: README.md  package.json  tsconfig.json
test-suite/configs/: implementations.ts
test-suite/examples/: add-implementation.md  quick-start.ts
test-suite/fixtures/test-files/: sample.txt
test-suite/specs/: autogui-tools.ts  core-tools.ts  hip0300-tools.ts  index.ts  ui-tools.ts
test-suite/src/: cli.ts  index.ts  mcp-protocol.ts  server-manager.ts  test-runner.ts  types.ts
test/autogui/: autogui-tools.test.ts
test/config/: configuration.test.ts
test/integration/: mcp-server.test.ts
test/search/: basic.test.ts  integration.test.ts  search-engine.test.ts  secure-tunnel.test.ts  url-helper.test.ts
test/tools/: edit.test.ts  file-ops.test.ts  search.test.ts  shell.test.ts  ui-github-api.test.ts
test/ui/: test-unified-hanzo.ts  ui-tools.test.ts  unified-ui-tool.test.ts
tests/: conftest.py  test_aci_integration.py  test_browser_use.py  test_browser_use_interface.py  test_cli_code.py  test_computer_use_interface.py  test_embedding_fallback.py  test_mcp_computer_use.py  test_mcp_manager.py
tests/test_external/: test_mcp_manager.py
