[package]
name = "hanzo-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Hanzo AI"]
description = "Hanzo MCP Server - Rust implementation with computer control, blockchain, and tool coordination"
license = "MIT"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# MCP Protocol
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-http-server = "18.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Utils
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
walkdir = "2.4"
glob = "0.3"
regex = "1.10"
rayon = "1.8"
once_cell = "1.19"

# Search and AST
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c = "0.20"

# Vector store
# lance = "0.10"  # Temporarily disabled due to arrow version conflict
# arrow = "50.0"   # Temporarily disabled due to build issues
vectordb = { version = "0.1", optional = true }

# Tool dependencies (optional, loaded from workspace)
# Commented out until these packages are available
# computer-control = { path = "../../tools/rust/computer-control", optional = true }
# blockchain = { path = "../../tools/rust/blockchain", optional = true }
# vector-store = { path = "../../tools/rust/vector-store", optional = true }
# file-system = { path = "../../tools/rust/file-system", optional = true }
# web-search = { path = "../../tools/rust/web-search", optional = true }
# code-execution = { path = "../../tools/rust/code-execution", optional = true }

[features]
default = []
# all-tools = ["computer-control", "blockchain", "vector-store", "file-system", "web-search", "code-execution"]
# computer-control = ["dep:computer-control"]
# blockchain = ["dep:blockchain"]
# vector-store = ["dep:vector-store"]
# file-system = ["dep:file-system"]
# web-search = ["dep:web-search"]
# code-execution = ["dep:code-execution"]

# Platform specific
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"

[[bin]]
name = "hanzo-mcp"
path = "src/main.rs"

[lib]
name = "hanzo_mcp"
path = "src/lib.rs"