[workspace]

[package]
name = "hanzo-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Hanzo AI"]
description = "Hanzo MCP Server - Rust implementation with computer control, blockchain, and tool coordination"
license = "MIT"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# MCP Protocol
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-http-server = "18.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Utils
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
walkdir = "2.4"
glob = "0.3"
regex = "1.10"
rayon = "1.8"
once_cell = "1.19"
base64 = "0.21"
shellexpand = "3.1"
chrono = { version = "0.4", features = ["serde"] }
which = "6.0"
shell-escape = "0.1"

# Search and AST
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c = "0.20"

# Vector store (optional)
# lance = "0.10"  # Temporarily disabled due to arrow version conflict
# arrow = "50.0"   # Temporarily disabled due to build issues
# vectordb = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3.10"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

# Platform specific
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"

[features]
default = []
# all-tools = ["computer-control", "blockchain", "vector-store", "file-system", "web-search", "code-execution"]

[[bin]]
name = "hanzo-mcp"
path = "src/main.rs"

[lib]
name = "hanzo_mcp"
path = "src/lib.rs"
